--- a/rooms.html
+++ b/rooms.html
@@ -58,19 +58,19 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://worksofheartph.com/builtable#home"><img src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="index.html#home"><img src="css/img/logo.png";></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://worksofheartph.com/builtable#about">About</a>
+                        <a class="page-scroll" href="index.html#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://worksofheartph.com/builtable#services">Services</a>
+                        <a class="page-scroll" href="index.html#services">Services</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#">Rooms & Rates</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="http://worksofheartph.com/builtable#community">Community</a>
+                        <a class="page-scroll" href="index.html#community">Community</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -119,8 +119,12 @@ and a medium level of concentration.</h2>
         <div class="row">
           <div class="col-lg-12">
             <div class="ratesbutton">
-            <a href="#">DOWNLOAD PDF OF ROOMS & RATES</a>
+            <a href="https://drive.google.com/file/d/0B5Ev3s3HRuJIVDZpb0lZTjNhemM/view" target="_blank">DOWNLOAD PDF OF ROOMS & RATES</a>
             </div>
+             <div class="ratesbutton">
+                  <a href="https://drive.google.com/file/d/0B54lMrl_mtKMdEtqWlk2WVAxc1E/view?usp=drive_web" target="_blank">DOWNLOAD PDF OF 3D PRINTING RATES</a>
+           
+             </div>
           </div>
         </div>
 
