fix major mobile issues

--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             <div class="row ">
               <div class="col-lg-2 col-lg-offset-2 col-md-offset-2 col-md-2 col-sm-6 col-xs-6">
                 <img src="css/img/icons_fab.png">
-                <p>Fabrication Lab & Machine Room</p>
+                <p>Fab Lab</p>
               </div>
               <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
                 <img src="css/img/icons_cowork.png">
