updated video link

--- a/learning.html
+++ b/learning.html
@@ -68,7 +68,8 @@
     
       <div class="modal-body">
        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/EFURKaZWG6s" frameborder="0" allowfullscreen></iframe>
+       <iframe src="https://www.youtube.com/embed/0_5olNkLVIo?ecver=2" width="640" height="360" frameborder="0"  allowfullscreen></iframe>
+        
       </div>
    
     </div><!-- /.modal-content -->
