--- a/coworking.html
+++ b/coworking.html
@@ -64,7 +64,7 @@
                         <a class="page-scroll" href="coworking.html">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="learning.html">Learning</a>
+                        <a class="page-scroll" href="learn.html">Learning</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Who we are</a>
