--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                         <a class="page-scroll" href="coworking.html">Coworking</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="learning.html">Learning</a>
+                        <a class="page-scroll" href="learn.html">Learning</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#about">Who we are</a>
