--- a/coworking.html
+++ b/coworking.html
@@ -58,7 +58,7 @@
                         <a class="page-scroll" href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#home"><img src="css/img/logo.png";></a>
+                        <a class="page-scroll" href="index.html"><img src="css/img/logo.png";></a>
                     </li>
                     <li>
                         <a class="page-scroll" href="coworking.html">Coworking</a>
