--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row">
           <div class="col-lg-12">
             <div class="ratesbutton">
-            <a href="rooms.html">CHECK OUT OUR RATES & ROOMS</a>
+            <a href="assets/Coworking-Rates.pdf">CHECK OUT OUR RATES & ROOMS</a>
             </div>
           </div>
         </div>
