--- a/learn.html
+++ b/learn.html
@@ -124,7 +124,7 @@
     <!-- Intro Section -->
     <section id="carousel" class="learn-intro-section">
         <div class="video-overlay"></div>
-        <video width="320" height="240" autoplay loop>
+        <video class="video-learn" width="320" height="240" autoplay loop>
             <source src="assets/learn-bg.mp4" type="video/mp4">
         </video>
         <div class="container">
