--- a/coworking.html
+++ b/coworking.html
@@ -89,7 +89,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1>Rooms & Rates</h1>
-                    <img src="css/img/room.png"/>
+                    <img src="css/img/room.png" class="col-xs-12"/>
                 </div>
             </div>
             <div class="row ">
@@ -117,9 +117,9 @@ and a medium level of concentration.</h2>
               </div>
 
         <div class="row">
-          <div class="col-lg-12">
+          <div class="col-xs-12">
             <div class="ratesbutton">
-            <a href="https://drive.google.com/file/d/0B5Ev3s3HRuJIVDZpb0lZTjNhemM/view" target="_blank">DOWNLOAD PDF OF ROOMS & RATES</a>
+            <a href="assets/Coworking-Rates.pdf" target="_blank">DOWNLOAD PDF OF ROOMS & RATES</a>
             </div>
              <div class="ratesbutton">
                   <a href="https://drive.google.com/file/d/0B54lMrl_mtKMdEtqWlk2WVAxc1E/view?usp=drive_web" target="_blank">DOWNLOAD PDF OF 3D PRINTING RATES</a>
