--- a/learn.html
+++ b/learn.html
@@ -124,7 +124,7 @@
     <!-- Intro Section -->
     <section id="carousel" class="learn-intro-section">
         <div class="video-overlay"></div>
-        <video id="video-learn" width="640" height="360" autoplay muted loop>
+        <video id="video-learn" width="640" height="360"  muted loop>
             <source src="assets/learn-bg.mp4" type="video/mp4">
         </video>
         <div class="container">
