--- a/index.html
+++ b/index.html
@@ -99,7 +99,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h1>CO-WORKING SPACE +<BR> FABRICATION LAB +<BR> WORKSHOPS</h1>
+                    <h1>CO-WORKING <br>
+                    CO-MAKING
+                    </h1>
                 </div>
             </div>
         </div>
@@ -143,68 +145,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         </div>
     </section>
 
-    <!-- Services Section -->
-    <section id="services" class="services-section">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h1>Services</h1>
-                </div>
-            </div>
-            <div class="row ">
-              <div class="col-lg-2 col-lg-offset-2 col-md-offset-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_fab.png">
-                <p>Fab Lab</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_cowork.png">
-                <p>Co-working Space</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_private.png">
-                <p>Private Rooms</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_meeting.png">
-                <p>Meeting Rooms</p>
-              </div>
 
-            </div>
-            <div class="clearfix row">
-              <div class="col-lg-2 col-lg-offset-1 col-md-offset-1 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_net1.png">
-                <p>High-speed Internet</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_hardware.png">
-                <p>Free Usage of Equipment</p>
 
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_locker.png">
-                <p>Dedicated Lockers</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_zen.png">
-                <p>Zen Room</p>
-              </div>
-              <div class="col-lg-2 col-md-2 col-sm-6 col-xs-6">
-                <img src="css/img/icons_coffee.png">
-                <p>A Cup of Coffee</p>
-              </div>
-            </div>
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="ratesbutton">
-            <a href="assets/Coworking-Rates.pdf">CHECK OUT OUR RATES & ROOMS</a>
-            </div>
-          </div>
-        </div>
-
-      </div>
-
-    </section>
-
+  
     <!-- Community Section -->
     <section id="community" class="community-section">
         <div class="container">
@@ -213,22 +156,24 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
             <div class="row">
                 <div class="col-lg-12">
-                  <h1>How to get to Builtable?</h1>
+                  <h1>directions, directions, directions...</h1>
                 </div>
                 <div class="col-lg-8">
+                    <a href="https://www.google.com.ph/maps/dir/''/builtable/data=!4m5!4m4!1m0!1m2!1m1!1s0x3397c83ec6c0f395:0x51a4af0dd5cbce2d?sa=X&ved=0ahUKEwjCp4f955_VAhXLyLwKHT-4CmQQ9RcIggEwCw" target="_new">
                   <div class="commright">
                     <h1></h1>
                   </div>
+                </a>
                 </div>
                 <div class="col-lg-4">
 
                     <div class="commleft">
                     <br><p>
-                    MRT: Stop at Shaw Blvd. Station, it's a 5min walk from there!<br>
-                    Shaw Blvd: From Manila, go straight along Shaw Blvd. then take a u-turn below the fly over. From Pasig, take a straight path and go below the fly-over.<br>
-                    EDSA: Northbound, Go straight along EDSA then right to United Street, then left to Sto. Cristo, then another left to Shaw Blvd. For southbound, along EDSA
-                    turn right to Shaw Blvd Service Road (Starmall Side)<br>
-                    </p>
+                    We are searchable at <strong>Google Maps</strong> and <strong>Waze</strong>!<br>
+                        <strong>From MRT:</strong> Stop at Shaw Blvd. Station, go down to the side of Starmall. It only takes a 5-minute walk!<br>
+                    <strong>CarParking:</strong> Park at Starmall (5-minute walk), Park at Shangrila Mall (10-minute walk).
+                    
+                </p>
 
                     </div>
                 </div>
@@ -239,6 +184,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
         </div>
     </section>
+
 
     <!-- Contact Section -->
     <section id="contact" class="contact-section">
