--- a/learn.html
+++ b/learn.html
@@ -149,9 +149,9 @@
                 <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12">
                     <div class="teacher-content">
                           <span class="glyphicon glyphicon-play hide"></span>
-                        <div class="pink-overlay">
+                        <!-- <div class="pink-overlay">
                            
-                        </div>
+                        </div> -->
                     <div class="joco"></div>
                        <h5>Joco</h5>
                     </div>
@@ -169,9 +169,9 @@
                 <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12">
                     <div class="teacher-content">
                         <span class="glyphicon glyphicon-play hide"></span>
-                        <div class="pink-overlay">
+                        <!-- <div class="pink-overlay">
                             
-                        </div>
+                        </div> -->
                        <div class="badz"></div>
                        <h5>Badz</h5>
                     </div>
