--- a/coworking.html
+++ b/coworking.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>UP TO 50% OFF UNTIL THIS MONTH!</h1>
+                    <h1>UP TO 40% OFF UNTIL THIS MONTH!</h1>
                     <a href="#coworking-form" class="btn page-scroll"> Book Now!</a>
                 </div>
             </div>
@@ -286,7 +286,7 @@
                         <div class="form-group col-sm-6">
                             <label for="name">What would you like to avail?<small> **VAT not included</small></label>
                             <select class="form-control" required id="serviceSelect">
-                                <option value="Private Offices">Private Offices(Sold Out) - 8500php per seat</option>
+                                <option value="Private Offices">Private Offices(1 left!) - 8500php per seat</option>
                                  <option value="Coworking hour">Coworking - Hourly Rate - 100php per seat</option>
                                  <option value="Coworking Day">Coworking - Day Rate - 500php per seat</option>
                                 <option value="Coworking Weekly 5 Days">Coworking - Weekly 5 day pass - 2300php per seat</option>
