--- a/learn.html
+++ b/learn.html
@@ -76,6 +76,19 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
+ <div class="modal fade" id="badzModal" tabindex="-1" role="dialog">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+    
+      <div class="modal-body">
+       <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+       <iframe src="https://www.youtube.com/embed/leOYVilvXhM?ecver=2" width="560" height="360" frameborder="0"  allowfullscreen></iframe>
+      </div>
+   
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
 
     <!-- Navigation -->
     <nav class="navbar navbar-fixed-top" role="navigation">
@@ -168,10 +181,10 @@
                 </div>
                 <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12">
                     <div class="teacher-content">
-                        <span class="glyphicon glyphicon-play hide"></span>
-                        <!-- <div class="pink-overlay">
+                         <span class="glyphicon glyphicon-play" data-toggle="modal" data-target="#badzModal"></span>
+                        <div class="pink-overlay" data-toggle="modal" data-target="#badzModal">
                             
-                        </div> -->
+                        </div>
                        <div class="badz"></div>
                        <h5>Badz</h5>
                     </div>
