--- a/index.html
+++ b/index.html
@@ -122,22 +122,28 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
     <section id="events" class="events-section">
         <div class="container">
             <div class="row">
-                <div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
+                <div class="col-lg-4 col-md-4  col-sm-6 col-xs-12 events-box" >
                     <div class="eventstitle">
-                    <h1>TYPES OF EVENTS at BUILTABLE</h1>
-                    <a href="#"><p>Learn More</p></a>
+                            <a href="https://www.facebook.com/pg/builtable/reviews/" target="_new">
+                            <span class="overlay"></span>
+                    <h1>5/5, Our Customers love us! </h1>
+                            </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
-                    <div class="eventscontent">
-                    <h1>Seminars & Workshops </h1>
-                    <p>Here are Builtable, you can learn making robots or how to use a 3D Printer!</p>
+                <div class="col-lg-4 col-md-4  col-sm-6  col-xs-12 events-box">
+                    <a href="https://www.facebook.com/pg/builtable/events/" target="_new">
+                    <div class="eventstitle workshop">
+                            <span class="overlay"></span>
+                    <h1> Next Workshops, Talks and Meetups</h1>
+                </a>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-4 hidden-sm hidden-xs">
-                    <div class="eventscontent">
-                      <h1>Meet Ups</h1>
-                      <p>More than anything, Builtable is a community. A lot of groups and startups do their meetups at our place.</p>
+                <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 events-box">
+                    <div class="eventstitle cowork">
+                        <a href="assets/Coworking-Rates.pdf" target="_new">
+                        <span class="overlay"></span>
+                      <h1>Coworking and Space Rates</h1>
+                    </a>
                   </div>
                 </div>
             </div>
@@ -210,14 +216,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 
                 </div>
                 <div class="col-lg-6">
-                  <form id="myform" name="myform" method="POST" action="">
-                      <div class="formInput"><input class="contactform btn-is-disabled" name="from" type="text" placeholder="Name"/></div>
-                      <div class="formInput"><input class="contactform" name="email" type="text" placeholder="Email"/></div>
-                      <div class="formInput"><input class="contactform" name="mobile" type="text" placeholder="Mobile"/></div>
-                      <div class="formInput"><textarea class="contactform" name="message" placeholder="Message"></textarea></div>
-                      <div class="formInput" placeholder="Message"></div>
-                  <input class="buttonform" type="submit" name="submit" value="SEND">
-                </form>
+                 <img src="assets/images/contact.jpg" class="img-responsive" alt="">
                 </div>
               </div>
 
