few text changes

--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                       Barangay Wack-Wack Mandaluyong City, 1555<br>
                       (Walking Distance from Shaw MRT Station)<br><br>
 
-                      Open Weekdays at 1PM-9PM & Saturdays 9AM-6PM.<br>
+                      Open Weekdays at 9AM-9PM & Saturdays 9AM-6PM.<br>
                       *Open to extend depending on events.</p>
 
                       <h2>marketing@builtable.co<br>
