--- a/coworking.html
+++ b/coworking.html
@@ -25,7 +25,7 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/lightgallery.min.css" rel="stylesheet">
+
     <!-- Custom CSS -->
     <link href="css/scrolling-nav.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -276,7 +276,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h3>BE PART OF THE COMMUNITY</h3>
-                    <h4>Coworking with us, 
+                    <h4>Cowork with us, 
                         <a style="color:black;" href="assets/Coworking-Rates.pdf" target="_new" >See rates.</a>
                     </h4>
                 </div>
@@ -355,7 +355,7 @@
     <script src="js/jquery.easing.min.js"></script>
     <script src="js/scrolling-nav.js"></script>
 
-    <!-- <script src="../lib/jquery.mousewheel.min.js"></script> -->
+
 <script src="js/coworking.js"></script>
 </body>
 
