update for this month

--- a/coworking.html
+++ b/coworking.html
@@ -139,7 +139,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>UP TO 30% OFF UNTIL THIS MONTH!</h1>
+                    <h1>2 Private rooms left! Cowork with us now!</h1>
                     <a href="#coworking-form" class="btn page-scroll"> Book Now!</a>
                 </div>
             </div>
