flash sale and bug fix

--- a/coworking.html
+++ b/coworking.html
@@ -139,8 +139,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-xs-12 caption">
-                    <h1>2 Private rooms left! Cowork with us now!</h1>
-                    <a href="#coworking-form" class="btn page-scroll"> Book Now!</a>
+                    <h1>Up to 40 % DISCOUNT!</h1>
+                    <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a>
                 </div>
             </div>
         </div>
@@ -279,6 +279,7 @@
                     <h4>Cowork with us, 
                         <a style="color:black;" href="assets/Coworking-Rates.pdf" target="_new" >See rates.</a>
                     </h4>
+                    <img src="assets/images/sale.png" style="max-width:50%; margin-bottom:30px;"/>
                 </div>
             </div>
             <div class="row">
