--- a/coworking.html
+++ b/coworking.html
@@ -279,7 +279,7 @@
                     <h4>Cowork with us, 
                         <a style="color:black;" href="assets/Coworking-Rates.pdf" target="_new" >See rates.</a>
                     </h4>
-                    <img src="assets/images/sale-1.png" class="img-sale"/>
+                    <img src="assets/images/sale-2.jpg" class="img-sale"/>
                 </div>
             </div>
             <div class="row">
