--- a/coworking.html
+++ b/coworking.html
@@ -140,7 +140,8 @@
             <div class="row">
                 <div class="col-xs-12 caption">
                     <h1>Up to 30 % DISCOUNT!</h1>
-                    <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a>
+                    <!-- <a href="#coworking-form" class="btn page-scroll"> GET IT NOW!</a> -->
+                    <a href="https://buff.ly/2h8yyyV"  class="btn page-scroll">GET IT NOw</a>
                 </div>
             </div>
         </div>
